--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
   "name": "angular-glpi",
+  "version": "1.0.0",
   "homepage": "https://github.com/ajsb85/angular-glpi",
   "authors": [
     "Alexander J. Salas B. <asalas@teclib.com>"
   ],
   "description": "Bower component for using AngularJS with GLPi API REST",
-  "main": "service.js",
+  "main": "angular-glpi.js",
   "dependencies": {
     "angular": "~1.5.8"
   },
