build(bower): change homepage

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-glpi",
   "version": "1.0.0",
-  "homepage": "https://github.com/ajsb85/angular-glpi",
+  "homepage": "https://github.com/flyve-mdm/angularjs-glpi",
   "authors": [
     "Alexander J. Salas B. <asalas@teclib.com>"
   ],
