build(bower): change file name and main file

--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
-  "name": "angular-glpi",
+  "name": "angularjs-glpi",
   "version": "1.0.0",
   "homepage": "https://github.com/flyve-mdm/angularjs-glpi",
   "authors": [
     "Alexander Salas Bastidas <asalas@teclib.com>"
   ],
   "description": "Bower component for using AngularJS with GLPi API REST",
-  "main": "angular-glpi.js",
+  "main": "angularjs-glpi.js",
   "dependencies": {
     "angular": "~1.5.8"
   },
