--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: angularjs glpi
 email: ml-flyvemdm@teclib.com
-twitter: flyvemdm
+twitter: glpi_project
 baseurl: "/angularjs-glpi"
-url: "http://flyve.org"   
-image: http://flyve.org/angularjs-glpi/images/logo2.png
+url: "https://glpi-project.github.iocomm"   
+image: https://glpi-project.github.iocomm/angularjs-glpi/images/logo2.png
 
 # Build settings
 markdown: kramdown
@@ -13,7 +13,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
 
-repository: flyve-mdm/angularjs-glpi
+repository: glpi-project/angularjs-glpi
 
 sass:
     style: compressed
