--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
   "bugs": {
     "url": "https://github.com/glpi-project/angularjs-glpi/issues"
   },
-  "homepage": "https://github.com/glpi-project/angularjs-glpi#readme",
-  "devDependencies": {
-    "lints": "^14.0.0"
-  }
+  "homepage": "https://github.com/glpi-project/angularjs-glpi#readme"
 }
