--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node Module for using AngularJS with GLPI API REST",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "lints"
   },
   "repository": {
     "type": "git",
